syntax = "proto3";

package budgeteer;
option go_package = "budgeteerpb";

message Purchase {
  string id = 1;
  int64 amount = 2;
}

message GetPurchasesRequest {
  string id = 1;
}

service BudgetService {
  rpc GetPurchase(GetPurchasesRequest) returns (Purchase) {}
}